@@ -1,6 +1,7 @@
 2010-07-08  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/sugar/functions/head.h: new sugar function : head
+	* inst/include/Rcpp/sugar/functions/tail.h: new sugar function : tail
 
 2010-07-07  Romain Francois <romain@r-enthusiasts.com>
 
